[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/Turret.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Turret/Turret.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Turret/Bullet/Bullet.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Turret" type="StaticBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
bullet_scene = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Reload_timer" type="Timer" parent="."]

[node name="Shoot_direction" type="RayCast2D" parent="."]
cast_to = Vector2( 50, 0 )

[connection signal="timeout" from="Reload_timer" to="." method="_on_Reload_timer_timeout"]
